2009-02-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ppp.c
		- (ce_page_ppp_new): shorten PPP page tab name

2009-02-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- (method_changed): disable "DHCP Client ID" entry for VPN connections

2009-02-05  Dan Williams  <dcbw@redhat.com>

	* nm-applet.conf
		- Update D-Bus rules for newer D-Bus, and deny attempts for non
			at_console/non-root processes to ask for a users'
			connections which they shouldn't need anyway

2009-02-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_device_check_unusable): add common code for checking
			whether a device is in a usable state and creating the
			menu item for it

	* src/applet-device-gsm.c
	  src/applet-device-wifi.c
	  src/applet-device-cdma.c
	  src/applet-device-wired.c
		- (*_add_menu_item): use nma_menu_device_check_unusable()

2009-02-04  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-settings.c
		- (read_connections): kill pointless warning (rh #484136)

2009-02-01  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- (nm_gconf_get_all_connections): implement applet GConf stamping to help
			upgrades; upgrade 'never-default' in some cases

	* src/gconf-helpers/gconf-upgrade.c
	  src/gconf-helpers/gconf-upgrade.h
		- (nm_gconf_migrate_0_7_vpn_never_default): new function; if there were
			static routes assigned to the VPN connection, set 'never-default'
			to TRUE on upgrade to match 0.7.0 behavior

2009-01-28  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/Makefile.am
	  src/connection-editor/ppp-auth-methods-dialog.c
	  src/connection-editor/ppp-auth-methods-dialog.h
		- Add a separate dialog for configuring PPP authentication
			methods, since the defaults rarely need to be changed

	* src/connection-editor/ce-page-ppp.glade
	  src/connection-editor/page-ppp.c
		- Move PPP authentication methods to a separate dialog
