@@ -1,5 +1,11 @@
 2009-02-06  Dan Williams  <dcbw@redhat.com>
 
+	* src/connection-editor/page-ip4.c
+		- (method_changed): hide options for cases where they don't apply (like
+			Manual addressing or DHCP for Mobile Broadband)
+
+2009-02-06  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/page-ppp.c
 		- (ce_page_ppp_new): shorten PPP page tab name
 
